@@ -1,3 +1,8 @@
+TAG: alleleload-6-0-0-?
+DATE: 08/20/15
+STAFF: lec
+CHANGES: TR12020/obsolete all_marker_assoc table
+
 TAG: alleleload-6-0-0-1
 DATE: 7/23/15
 STAFF: pf
